packages/shulker-operator/src/reconcilers/minecraft_server/snapshots/shulker_operator__reconcilers__minecraft_server__config_map__custom__tests__to_string.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_server/config_map.rs
expression: yml
---
online-mode: true
secret: my-secret


